# lc-guidance-2

./: .gitignore  fix.py  generate_test_sheets.js  index.html  package-lock.json  package.json  patch_reports.py  tailwind.config.js  test_import.csv
design/stitch_laguna_case_filing_system/case_catalog/: code.html
design/stitch_laguna_case_filing_system/case_detail_view/: code.html
design/stitch_laguna_case_filing_system/file_new_case/: code.html
design/stitch_laguna_case_filing_system/paper_digitized_office/: DESIGN.md
design/stitch_laguna_case_filing_system/summary_reports/: code.html
src/: App.css  App.tsx  types.ts  vite-env.d.ts
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  lib.rs  main.rs
src-tauri/src/auth/: mod.rs
src-tauri/src/commands/: import.rs  mod.rs
src-tauri/src/db/: backup.rs  mod.rs  schema.rs
src-tauri/src/email/: mod.rs
src/components/: DatePicker.tsx  FileNewCaseModal.tsx  ImportExcelModal.tsx  Layout.tsx  Sidebar.tsx  TopAppBar.tsx
src/hooks/: useDarkMode.ts
src/pages/: AccountSettings.tsx  Backup.tsx  CaseCatalog.tsx  CaseDetails.tsx  FileNewCase.tsx  ImportReview.tsx  PendingCases.tsx  SignIn.tsx  SummaryReports.tsx
