[package]
name = "lc-guidance"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "lc_guidance_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
csv = "1.4.0"
base64 = "0.22"
argon2 = "0.5"
lettre = { version = "0.11", features = ["smtp-transport", "rustls-tls", "builder"] }
rand = "0.8"
rand_core = { version = "0.6", features = ["getrandom"] }
calamine = { version = "0.24", features = ["dates"] }
rust_xlsxwriter = "0.70"
